--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,10 +40,11 @@
 	background-color:#fff;
 	color:#333;
 
-
-
 }
 
+.comment-ng-repeat{
+	margin: 30px 0px;
+}
 .comment-class{
 	margin: -10px!important;
 
