--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,10 +22,37 @@ body{
 
 .hoot{
 	transition:ease all 2s!important;
-	
 
 }
 
+.followdoe{
+  margin: 30px 0px;
+}
+
+/*FOLLOW BUTTON*/
+
+.follow-button {
+  color: #3399FF;
+  font-family: "Helvetica";
+  font-size: 10pt;
+  background-color: #ffffff;
+  border: 1px solid;
+  border-color: #3399FF;
+  border-radius: 3px;
+  width: 85px;
+  height: 30px; 
+  cursor: hand;       
+}
+
+.following-button{
+  color:#3399FF;
+  width: 85px;
+  height: 30px; 
+  border: 1px solid;
+  border-color: #333;
+  font-size: 10pt;
+
+}
 
 .image-style{
     margin: 0px 50px;
@@ -70,6 +97,7 @@ body{
 
 #file{
 	display: block;
+ margin: 20px 0px;
 }
 
 #pic-sub{
@@ -80,6 +108,14 @@ body{
 	padding: 10px 20px;
 	margin:20px 0px;
 	color: #333;
+}
+#pic-sub2{
+  display: block;
+  text-align: center;
+  background-color: transparent;
+  border:2px solid #fff;
+  margin:50px auto;
+  color: #fff;
 }
 
 .comment-ng-repeat{
@@ -137,6 +173,85 @@ i{
 
   margin-top: 20px;
 }
+.profiledoe{
+  width: 200px;
+  height: 200px;
+  position: relative;
+  display: inline-block;
+  text-align: center;
+
+}
+
+.profile_pic_container{
+  position: relative;
+  width: 100%;
+    height: 100%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  cursor: pointer;
+  overflow: hidden;
+  font-size:8px;
+  text-align: center;
+}
+
+.profile_pic_container:hover .overlay{
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    
+}
+  .profile_pic_container:hover .pic{
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: transform .5s ease, opacity 1.3s ease;
+    transition: transform .5s ease, opacity 1.3s ease;
+  }
+
+  
+.overlay{
+  background: rgba(0,0,0,0.4);
+  position: absolute;
+  margin: auto;
+  width: 0px;
+  height: 0px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  
+  opacity: 0;
+  
+  -webkit-transition: .4s ease;
+  transition: .4s ease;
+  
+  }
+
+.pic{
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    margin: 0px;
+    width: 100%;
+    height: 30px;
+    padding: 40px;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: transform .5s ease, opacity .7s ease;
+    transition: transform .5s ease, opacity .7s ease;
+}
+
+
 
 .container .title{
   color: #1a1a1a;
@@ -147,6 +262,7 @@ i{
   padding: 1em 0;
   float: left;
   width: 50%;
+  height:50%;
 }
 
 .my_container img{
@@ -223,4 +339,15 @@ i{
 
 .fadeIn-bottom{
   top: 80%;
+}
+
+
+@media screen and (max-width: 980px) {
+
+.cloe{
+  text-align: center;
+  margin:0 auto;
+}
+
+
 }
